# ATU-Project

./: .gitignore  docker-compose.yaml  package-lock.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  codeql.yml  docker-publish.yml  main-pipeline.yml  node.js.yml  snyk-security.yml  sonarcloud.yml
client/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
client/.husky/: pre-commit
client/.husky/_/: husky.sh
client/src/: app.tsx  main.tsx
client/src/assets/: logo.svg:Zone.Identifier  profile-placeholder.png:Zone.Identifier
client/src/components/: CustomButton.tsx  Footer.tsx  FormField.tsx  GlobalMessage.tsx  Grid.tsx  Header.tsx  ItemDetail.tsx  ItemDetailCard.tsx  ItemList.tsx  Logo.tsx  Message.tsx  OfferDetail.tsx  OfferList.tsx  PaginatedItemList.tsx  Pagination.tsx  ThemeToggle.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: useCustomButtonBehavior.ts  useFormErrors.ts
client/src/pages/: About.tsx  AboutPage.tsx  AdminPage.tsx  AdminTradePage.tsx  ConfirmTradePage.tsx  Home.tsx  HomePage.tsx  ItemFormPage.tsx  ItemListPage.tsx  ItemPage.tsx  Login.tsx  LoginPage.tsx  NotFound.tsx  Offer.tsx  OfferListPage.tsx  Offers.tsx  Profile.tsx  ProfilePage.tsx  SignUpPage-bkp.tsx  SignUpPage.tsx  TradeListPage.tsx  TradePage.tsx
client/src/pages/admin/: AdminItemFormPage.tsx  AdminItemPage.tsx  AdminPage.tsx  AdminProfilePage.tsx  AdminTradePage.tsx
client/src/services/: addressService.ts  authService.ts  authService.tsx  baseService.ts  itemService.ts  tradeService.ts
client/src/styles/: Admin.module.css  Auth.module.css  Grid.module.css  Home.module.css  ItemDetail.module.css  Offer.module.css  Pagination.module.css  global.css
client/src/types/: FormTypes.ts  item.ts  page.ts  trade.ts  user.ts
client/src/utils/: caseConverters.ts  scroll.ts  statusUtils.ts  tradeUtils.ts  validators.ts
client/tests/: caseConverters.test.ts  scroll.test.ts  statusUtils.test.ts  tradeUtils.test.ts  validators.test.ts
client/tests/unit/: caseConverters.test.ts  dummy.test.ts  scroll.test.ts  statusUtils.test.ts  tradeUtils.test.ts  validators.test.ts
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
server/app/: database.py  main.py  models.py  schemas.py  security.py  settings.py
server/app/middlewares/: cors.py
server/app/routers/: auth.py  items.py  trades.py  users.py
server/migrations/: env.py
server/migrations/versions/: 0031ec544047_initial_migration.py  14e7193e14e3_create_tables.py  1c6af7be9d4e_remove_unique_constrate_fer_trade_items.py  d1db3671ddb9_create_users_table.py  d4e391fe6bcf_create_inital_migration.py
server/tests/: conftest.py  test_db.py  test_dummy.py  test_items.py  test_security.py  test_user.py
