[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "IvanFrezzaJr",email = "ivanfrezza@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = {extras = ["standard"], version = "^0.115.3"}
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
psycopg = {extras = ["binary"], version = "^3.2.6"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


