[project]
name = "server"
version = "0.1.0"
description = ""
authors = [{ name = "IvanFrezzaJr", email = "ivanfrezza@gmail.com" }]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = { extras = ["standard"], version = "^0.115.3" }
pydantic = { extras = ["email"], version = "^2.9.2" }
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
pwdlib = { extras = ["argon2"], version = "^0.2.1" }
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
psycopg2 = { extras = ["binary"], version = "^2.9.10" }
psycopg-binary = "^3.2.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"
pre-commit = "^4.2.0"
mypy = "^1.15.0"
freezegun = "^1.5.1"
testcontainers = "^4.10.0"
factory-boy = "^3.3.3"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.ruff]
line-length = 79
exclude = ["migrations"]


[tool.ruff.lint]
preview = true
# isort, pyflakes, pycodestyle(erros), pycodestyle(avisos), pylint, flake8-pytest
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.mypy]
exclude = "migrations"

ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = false
disallow_incomplete_defs = false
allow_untyped_globals = true
implicit_optional = true
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
pretty = true


[tool.taskipy.tasks]
run = 'fastapi dev app/main.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

pre_test = 'task lint'
test = 'pytest --cov=tests -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
